Fix: Scroll bar cropping text
Fix #613

--- a/styles/hydrogen.less
+++ b/styles/hydrogen.less
@@ -77,8 +77,7 @@
         .bubble-output-container {
             border-radius: 3px 0 0 3px;
             padding: 3px;
-            padding-right: 7px;
-            overflow: overlay;
+            overflow: auto;
         }
 
         .rich-close-button::before {
